Adjust scope, reorg dependencies after refactor